# pegaflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: metrics.md
examples/: basic_vllm.py  bench_kv_cache.py  bench_layer_wise.py  ipc_receiver.py  ipc_sender.py  run_vllm_pd_with_pega.py  run_vllm_with_pega.py  share_gpt_bench.py
examples/metric/grafana/dashboards/: pegaflow.json
pega-core/: Cargo.toml
pega-core/src/: lib.rs  storage.rs  sync_state.rs  transfer.rs
pegaflow-core/: Cargo.toml
pegaflow-core/examples/: pinned_alloc.rs
pegaflow-core/src/: cache.rs  lib.rs  metrics.rs  pinned_mem.rs  pinned_pool.rs  seal_offload.rs  storage.rs  sync_state.rs
pegaflow-server/: Cargo.toml
pegaflow-server/proto/: engine.proto
pegaflow-server/src/: lib.rs  main.rs  metric.rs  registry.rs  service.rs
python/: pyproject.toml
python/pegaflow/: __init__.py  _server.py  connector copy.py  connector.py  engine_server.py  ipc_wrapper.py  logging_utils.py
python/pegaflow/connector/: __init__.py  common.py  scheduler.py  worker.py
python/src/: lib.rs
