[workspace]
members = ["pegaflow-core", "pegaflow-proto", "pegaflow-server", "python"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Workspace members
pegaflow-core = { path = "pegaflow-core" }

# Core dependencies
cudarc = { version = "0.18.0", features = ["cuda-12040"] }
tracing = "0.1"
offset-allocator = "0.2.0"
hashlink = "0.11.0"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
shared_memory = "0.12"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
dashmap = "6.1"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "trace",
  "metrics",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.31.0", features = [
  "trace",
  "metrics",
  "rt-tokio-current-thread",
] }
bytesize = "2.3.1"

# HTTP/Web
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"

# grpc
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"


# Python bindings
pyo3 = { version = "0.27" }
pyo3-build-config = { version = "0.27", features = ["resolve-config"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# Dev dependencies
criterion = "0.8"

tikv-jemallocator = "0.6.1"