[package]
name = "pegaflow-core"
version.workspace = true
edition.workspace = true

[dependencies]
cudarc.workspace = true
tracing.workspace = true
offset-allocator.workspace = true
hashlink.workspace = true
tokio.workspace = true
rand.workspace = true
shared_memory.workspace = true
uuid.workspace = true
crossbeam.workspace = true
opentelemetry.workspace = true
bytesize.workspace = true
libc = "0.2"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "pinned_copy"
harness = false

[[bench]]
name = "uds_latency"
harness = false

[[example]]
name = "pinned_alloc"
