[package]
name = "pegaflow-server"
version.workspace = true
edition.workspace = true

[lib]
name = "pegaflow_server"
path = "src/lib.rs"

[[bin]]
name = "pegaflow-server"
path = "src/main.rs"

[dependencies]
pegaflow-core.workspace = true
pegaflow-proto = { path = "../pegaflow-proto" }
prost.workspace = true
pyo3 = { workspace = true, features = ["auto-initialize"] }
cudarc.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tikv-jemallocator.workspace = true
redis.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
