[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pegaflow"
version = "0.0.1"
description = "High-performance key-value storage engine with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "PegaFlow Contributors" }
]
keywords = ["storage", "kv-store", "rust", "vllm", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "requests>=2.31",
]

[tool.maturin]
# The Rust extension module will be named pegaflow.pegaflow
# This allows: from pegaflow import PegaEngine
module-name = "pegaflow.pegaflow"
python-source = "."
features = ["pyo3/extension-module"]
